Fix HA1130 Java 8 test compatibility