@@ -8,7 +8,7 @@ import org.junit.Test;
 
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
-import java.nio.file.Path;
+import java.nio.file.Paths;
 
 public final class StockHudControlsContractTest {
     @Test public void primarySettingsExposeProfileModesAndAllFiveCategories() throws Exception {
@@ -33,12 +33,12 @@ public final class StockHudControlsContractTest {
     }
 
     private static String read(String relative) throws Exception {
-        return Files.readString(Path.of("src/main/java").resolve(relative),
-                StandardCharsets.UTF_8);
+        return new String(Files.readAllBytes(
+                Paths.get("src/main/java").resolve(relative)), StandardCharsets.UTF_8);
     }
 
     private static String readGeely(String relative) throws Exception {
-        return Files.readString(Path.of("src/geely/java").resolve(relative),
-                StandardCharsets.UTF_8);
+        return new String(Files.readAllBytes(
+                Paths.get("src/geely/java").resolve(relative)), StandardCharsets.UTF_8);
     }
 }
